; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_jsutils.c_to_integer.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_jsutils.c_to_integer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @to_integer(i32* %0, i32 %1, double* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca double*, align 8
  %8 = alloca double, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store double* %2, double** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @to_number(i32* %10, i32 %11, double* %8)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = call i64 @FAILED(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %9, align 4
  store i32 %17, i32* %4, align 4
  br label %40

18:                                               ; preds = %3
  %19 = load double, double* %8, align 8
  %20 = call i64 @isnan(double %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load double*, double** %7, align 8
  store double 0.000000e+00, double* %23, align 8
  br label %38

24:                                               ; preds = %18
  %25 = load double, double* %8, align 8
  %26 = fcmp oge double %25, 0.000000e+00
  br i1 %26, label %27, label %30

27:                                               ; preds = %24
  %28 = load double, double* %8, align 8
  %29 = call double @llvm.floor.f64(double %28)
  br label %35

30:                                               ; preds = %24
  %31 = load double, double* %8, align 8
  %32 = fneg double %31
  %33 = call double @llvm.floor.f64(double %32)
  %34 = fneg double %33
  br label %35

35:                                               ; preds = %30, %27
  %36 = phi double [ %29, %27 ], [ %34, %30 ]
  %37 = load double*, double** %7, align 8
  store double %36, double* %37, align 8
  br label %38

38:                                               ; preds = %35, %22
  %39 = load i32, i32* @S_OK, align 4
  store i32 %39, i32* %4, align 4
  br label %40

40:                                               ; preds = %38, %16
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i32 @to_number(i32*, i32, double*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i64 @isnan(double) #1

; Function Attrs: nounwind readnone speculatable willreturn
declare double @llvm.floor.f64(double) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
